# cyphera-kernel

./: .gitignore  .gitleaks.toml  Cargo.toml  NOTICE.md  README.md  SECURITY.md  deny.toml  dev  rust-toolchain.toml  rustfmt.toml
drivers/virtio/: Cargo.toml
frame/: Cargo.toml  build.rs
frame/src/: boot.rs  boot.s  coverage.rs  lib.rs  panic.rs
frame_host/: Cargo.toml  README.md
frame_host/src/: lib.rs
fuzz/: Cargo.toml
fuzz/.cargo/: config.toml
fuzz/fuzz_targets/: arch_prctl_decode.rs  bpf_interp.rs  bpf_verify.rs  cgroup_value_parse.rs  clone_args_parse.rs  clone_flags_validate.rs  elf_dynamic.rs  elf_parse.rs  elf_relocation.rs  ext4_dir_entry.rs  ext4_extent.rs  ext4_inode.rs  ext4_superblock.rs  futex_op_decode.rs  inode_kind_decode.rs  mmap_args_decode.rs  mprotect_decode.rs  mremap_decode.rs  octal_parse.rs  path_normalize.rs  sigaction_decode.rs  smoltcp_parse.rs  sockaddr_in_parse.rs  tar_parse.rs
kapi/: Cargo.toml
kapi/src/: lib.rs
kernel/: Cargo.toml  build.rs
kernel/src/: bpf.rs  cgroup.rs  console.rs  drm.rs  elf.rs  errno.rs  fdtypes.rs  fsnotify.rs  futex.rs  init_exec.rs  input.rs  klog.rs  lib.rs  mmap_fault.rs  process.rs  process_host.rs  ptrace.rs  pty.rs  sched.rs  sched_host.rs  sched_runqueue.rs  sched_state.rs  seccomp.rs  signal.rs  stack_init.rs  timeout.rs  wait.rs
runtime/boot/: Cargo.toml  build.rs  linker.ld
selftests/: .gitignore  Cargo.toml  LICENSE-APACHE  README.md
selftests/.cargo/: config.toml
selftests/hello/: Cargo.toml  linker.ld
selftests/proc_a/: Cargo.toml  linker.ld
selftests/proc_abi/: Cargo.toml
selftests/proc_argv/: Cargo.toml  linker.ld
selftests/proc_auxv_probe/: Cargo.toml
selftests/proc_b/: Cargo.toml  linker.ld
selftests/proc_caps/: Cargo.toml
selftests/proc_cgroups/: Cargo.toml  linker.ld
selftests/proc_chroot/: Cargo.toml  build.rs
selftests/proc_clock/: Cargo.toml
selftests/proc_clock_settime/: Cargo.toml  linker.ld
selftests/proc_clone/: Cargo.toml
selftests/proc_clone3/: Cargo.toml
selftests/proc_compat_intro/: Cargo.toml
selftests/proc_cow_fork/: Cargo.toml
selftests/proc_cow_fork_mmrace/: Cargo.toml
selftests/proc_cow_forkrace/: Cargo.toml
selftests/proc_cow_futex/: Cargo.toml
selftests/proc_cow_ptrace/: Cargo.toml
selftests/proc_cow_threads/: Cargo.toml
selftests/proc_cpu_throttle/: Cargo.toml
selftests/proc_creds/: Cargo.toml  linker.ld
selftests/proc_dirs/: Cargo.toml
selftests/proc_dl/: Cargo.toml
selftests/proc_dl_overrun/: Cargo.toml
selftests/proc_epoll_signal_eintr/: Cargo.toml
selftests/proc_exec/: Cargo.toml  linker.ld
selftests/proc_exec_threaded/: Cargo.toml
selftests/proc_ext4/: Cargo.toml
selftests/proc_fault_race/: Cargo.toml
selftests/proc_fifo/: Cargo.toml
selftests/proc_files/: Cargo.toml
selftests/proc_flock/: Cargo.toml
selftests/proc_fork/: Cargo.toml  linker.ld
selftests/proc_fork_rlimit/: Cargo.toml
selftests/proc_fork_shared/: Cargo.toml
selftests/proc_fs_extras/: Cargo.toml
selftests/proc_fsync/: Cargo.toml
selftests/proc_futex/: Cargo.toml  linker.ld
selftests/proc_futex_timeout/: Cargo.toml
selftests/proc_futex_waitv/: Cargo.toml  linker.ld
selftests/proc_ioctl_oss/: Cargo.toml  linker.ld
selftests/proc_itimer/: Cargo.toml
selftests/proc_jobctl/: Cargo.toml
selftests/proc_loadtick/: Cargo.toml
selftests/proc_memfd/: Cargo.toml
selftests/proc_misc/: Cargo.toml  linker.ld
selftests/proc_misc_quickwins/: Cargo.toml  linker.ld
selftests/proc_mknod/: Cargo.toml  linker.ld
selftests/proc_mlock/: Cargo.toml  linker.ld
selftests/proc_mmap_extras/: Cargo.toml
selftests/proc_mmap_shared/: Cargo.toml
selftests/proc_mprotect/: Cargo.toml
selftests/proc_mremap/: Cargo.toml  linker.ld
selftests/proc_msg_dontwait/: Cargo.toml
selftests/proc_namespaces/: Cargo.toml
selftests/proc_net/: Cargo.toml  linker.ld
selftests/proc_oom/: Cargo.toml
selftests/proc_oom_stack/: Cargo.toml
selftests/proc_perms/: Cargo.toml
selftests/proc_pi_futex/: Cargo.toml
selftests/proc_pidfd/: Cargo.toml
selftests/proc_pidfd_reap/: Cargo.toml
selftests/proc_pidns/: Cargo.toml
selftests/proc_pipe_size/: Cargo.toml  linker.ld
selftests/proc_pollable_fd_wake/: Cargo.toml
selftests/proc_posix_timer/: Cargo.toml
selftests/proc_process_vm/: Cargo.toml  linker.ld
selftests/proc_procfs/: Cargo.toml
selftests/proc_ptrace/: Cargo.toml  linker.ld
selftests/proc_ptrace_attach_run/: Cargo.toml
selftests/proc_ptrace_orphan/: Cargo.toml
selftests/proc_ptrace_segv/: Cargo.toml
selftests/proc_ptrace_signal/: Cargo.toml  linker.ld
selftests/proc_ptrace_singlestep/: Cargo.toml
selftests/proc_ptrace_traceexec/: Cargo.toml
selftests/proc_ptrace_traceexit/: Cargo.toml
selftests/proc_ptrace_tracefork/: Cargo.toml  linker.ld
selftests/proc_pty/: Cargo.toml  linker.ld
selftests/proc_remount/: Cargo.toml
selftests/proc_rseq/: Cargo.toml
selftests/proc_rt/: Cargo.toml
selftests/proc_rt_signal/: Cargo.toml  linker.ld
selftests/proc_sa_restart/: Cargo.toml  linker.ld
selftests/proc_sched_churn/: Cargo.toml
selftests/proc_seccomp/: Cargo.toml
selftests/proc_segv/: Cargo.toml  linker.ld
selftests/proc_segv_handler/: Cargo.toml
selftests/proc_select/: Cargo.toml
selftests/proc_sigfpe_handler/: Cargo.toml
selftests/proc_signal/: Cargo.toml  linker.ld
selftests/proc_signal_drain/: Cargo.toml
selftests/proc_signals_default/: Cargo.toml
selftests/proc_sigsuspend_race/: Cargo.toml
selftests/proc_sigwait_kill/: Cargo.toml
selftests/proc_sockopt/: Cargo.toml
selftests/proc_spin_kill/: Cargo.toml
selftests/proc_stress_threads/: Cargo.toml  linker.ld
selftests/proc_syscalls/: Cargo.toml
selftests/proc_threads/: Cargo.toml
selftests/proc_threads_coherence/: Cargo.toml
selftests/proc_threads_shm/: Cargo.toml
selftests/proc_timeouts/: Cargo.toml  linker.ld
selftests/proc_timer_storm/: Cargo.toml
selftests/proc_timerfd_race/: Cargo.toml
selftests/proc_tmpfs_leak/: Cargo.toml
selftests/proc_uid_sigpending/: Cargo.toml
verification/: Cargo.toml
(+467 files in other folders)
