[workspace]
resolver = "2"
members = [
    "hello",
    "proc_a",
    "proc_abi",
    "proc_argv",
    "proc_auxv_probe",
    "proc_b",
    "proc_caps",
    "proc_cgroups",
    "proc_chroot",
    "proc_clock",
    "proc_clock_settime",
    "proc_clone",
    "proc_clone3",
    "proc_compat_intro",
    "proc_cpu_throttle",
    "proc_creds",
    "proc_dirs",
    "proc_dl",
    "proc_dl_overrun",
    "proc_exec",
    "proc_exec_threaded",
    "proc_ext4",
    "proc_fifo",
    "proc_files",
    "proc_flock",
    "proc_fork",
    "proc_fork_shared",
    "proc_fs_extras",
    "proc_futex",
    "proc_futex_waitv",
    "proc_ioctl_oss",
    "proc_jobctl",
    "proc_memfd",
    "proc_misc",
    "proc_misc_quickwins",
    "proc_mmap_extras",
    "proc_mmap_shared",
    "proc_mprotect",
    "proc_mremap",
    "proc_namespaces",
    "proc_net",
    "proc_loadtick",
    "proc_perms",
    "proc_pidfd",
    "proc_pidns",
    "proc_pi_futex",
    "proc_process_vm",
    "proc_procfs",
    "proc_sigsuspend_race",
    "proc_ptrace",
    "proc_ptrace_signal",
    "proc_pty",
    "proc_rseq",
    "proc_rt",
    "proc_seccomp",
    "proc_segv",
    "proc_signal",
    "proc_signals_default",
    "proc_sockopt",
    "proc_ptrace_tracefork",
    "proc_syscalls",
    "proc_threads",
    "proc_threads_coherence",
    "proc_threads_shm",
    "proc_timeouts",
    "proc_userns",
    "proc_wait4",]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
authors = ["Horizon Digital Engineering LLC <security@horizondigital.dev>"]
repository = "https://github.com/cyphera-labs/cyphera-kernel"
homepage = "https://github.com/cyphera-labs/cyphera-kernel"
publish = false

[profile.dev]
panic = "abort"
opt-level = 1
debug = true

[profile.release]
panic = "abort"
opt-level = "s"
debug = true
lto = "thin"
codegen-units = 1
