[package]
name = "cyphera-kernel"
description = "Cyphera Kernel boot binary — PVH ELF entry, multiboot2, long-mode bring-up, kernel_main."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[[bin]]
name = "cyphera-kernel"
path = "src/main.rs"
test = false
bench = false

[[test]]
name = "boot_smoke"
path = "tests/smoke/boot_smoke.rs"
harness = false

[[test]]
name = "frame_api"
path = "tests/smoke/frame_api.rs"
harness = false

[[test]]
name = "direct_map_alias"
path = "tests/smoke/direct_map_alias.rs"
harness = false

[[test]]
name = "ex_table"
path = "tests/smoke/ex_table.rs"
harness = false

[[test]]
name = "user_exit"
path = "tests/smoke/user_exit.rs"
harness = false

[[test]]
name = "user_hello"
path = "tests/smoke/user_hello.rs"
harness = false

[[test]]
name = "user_elf"
path = "tests/smoke/user_elf.rs"
harness = false

[[test]]
name = "multi_proc"
path = "tests/smoke/multi_proc.rs"
harness = false

[[test]]
name = "page_fault"
path = "tests/smoke/page_fault.rs"
harness = false

[[test]]
name = "syscalls"
path = "tests/smoke/syscalls.rs"
harness = false

[[test]]
name = "virtio_rng"
path = "tests/smoke/virtio_rng.rs"
harness = false

[[test]]
name = "virtio_blk"
path = "tests/smoke/virtio_blk.rs"
harness = false

[[test]]
name = "virtio_net"
path = "tests/smoke/virtio_net.rs"
harness = false

[[test]]
name = "virtio_sound"
path = "tests/smoke/virtio_sound.rs"
harness = false

[[test]]
name = "virtio_sound_play"
path = "tests/smoke/virtio_sound_play.rs"
harness = false

[[test]]
name = "sound_demo"
path = "tests/smoke/sound_demo.rs"
harness = false

[[test]]
name = "dev_dsp"
path = "tests/smoke/dev_dsp.rs"
harness = false

[[test]]
name = "ioctl_sign_ext"
path = "tests/smoke/ioctl_sign_ext.rs"
harness = false

[[test]]
name = "mremap"
path = "tests/smoke/mremap.rs"
harness = false

[[test]]
name = "files"
path = "tests/subsystem/files.rs"
harness = false

[[test]]
name = "dirs"
path = "tests/subsystem/dirs.rs"
harness = false

[[test]]
name = "procfs"
path = "tests/subsystem/procfs.rs"
harness = false

[[test]]
name = "ext4"
path = "tests/subsystem/ext4.rs"
harness = false

[[test]]
name = "abi"
path = "tests/subsystem/abi.rs"
harness = false

[[test]]
name = "net"
path = "tests/subsystem/net.rs"
harness = false

[[test]]
name = "fork"
path = "tests/subsystem/fork.rs"
harness = false

[[test]]
name = "fork_rlimit"
path = "tests/subsystem/fork_rlimit.rs"
harness = false

[[test]]
name = "oom"
path = "tests/subsystem/oom.rs"
harness = false

[[test]]
name = "oom_stack"
path = "tests/subsystem/oom_stack.rs"
harness = false

[[test]]
name = "fork_shared"
path = "tests/subsystem/fork_shared.rs"
harness = false

[[test]]
name = "exec"
path = "tests/subsystem/exec.rs"
harness = false

[[test]]
name = "exec_interp"
path = "tests/subsystem/exec_interp.rs"
harness = false

[[test]]
name = "exec_threaded"
path = "tests/subsystem/exec_threaded.rs"
harness = false

[[test]]
name = "wait4"
path = "tests/subsystem/wait4.rs"
harness = false

[[test]]
name = "clock"
path = "tests/subsystem/clock.rs"
harness = false

[[test]]
name = "misc"
path = "tests/subsystem/misc.rs"
harness = false

[[test]]
name = "futex"
path = "tests/subsystem/futex.rs"
harness = false

[[test]]
name = "signal"
path = "tests/subsystem/signal.rs"
harness = false

[[test]]
name = "rt_signal"
path = "tests/subsystem/rt_signal.rs"
harness = false

[[test]]
name = "sa_restart"
path = "tests/subsystem/sa_restart.rs"
harness = false

[[test]]
name = "select"
path = "tests/subsystem/select.rs"
harness = false

[[test]]
name = "pipe_size"
path = "tests/subsystem/pipe_size.rs"
harness = false

[[test]]
name = "argv"
path = "tests/subsystem/argv.rs"
harness = false

[[test]]
name = "pty"
path = "tests/subsystem/pty.rs"
harness = false

[[test]]
name = "chroot"
path = "tests/subsystem/chroot.rs"
harness = false

[[test]]
name = "timeouts"
path = "tests/subsystem/timeouts.rs"
harness = false

[[test]]
name = "fs_extras"
path = "tests/subsystem/fs_extras.rs"
harness = false

[[test]]
name = "signals_default"
path = "tests/subsystem/signals_default.rs"
harness = false

[[test]]
name = "mmap_extras"
path = "tests/subsystem/mmap_extras.rs"
harness = false

[[test]]
name = "threads"
path = "tests/subsystem/threads.rs"
harness = false

[[test]]
name = "threads_shm"
path = "tests/subsystem/threads_shm.rs"
harness = false

[[test]]
name = "threads_coherence"
path = "tests/subsystem/threads_coherence.rs"
harness = false

[[test]]
name = "loadtick"
path = "tests/subsystem/loadtick.rs"
harness = false

[[test]]
name = "itimer"
path = "tests/subsystem/itimer.rs"
harness = false

[[test]]
name = "sigsuspend_race"
path = "tests/subsystem/sigsuspend_race.rs"
harness = false

[[test]]
name = "epoll_signal_eintr"
path = "tests/subsystem/epoll_signal_eintr.rs"
harness = false

[[test]]
name = "jobctl"
path = "tests/subsystem/jobctl.rs"
harness = false

[[test]]
name = "creds"
path = "tests/subsystem/creds.rs"
harness = false

[[test]]
name = "pidfd"
path = "tests/subsystem/pidfd.rs"
harness = false

[[test]]
name = "sockopt"
path = "tests/subsystem/sockopt.rs"
harness = false

[[test]]
name = "fifo"
path = "tests/subsystem/fifo.rs"
harness = false

[[test]]
name = "flock"
path = "tests/subsystem/flock.rs"
harness = false

[[test]]
name = "mmap_shared"
path = "tests/subsystem/mmap_shared.rs"
harness = false

[[test]]
name = "mprotect"
path = "tests/subsystem/mprotect.rs"
harness = false

[[test]]
name = "clone"
path = "tests/subsystem/clone.rs"
harness = false

[[test]]
name = "perms"
path = "tests/subsystem/perms.rs"
harness = false

[[test]]
name = "caps"
path = "tests/subsystem/caps.rs"
harness = false

[[test]]
name = "userns"
path = "tests/subsystem/userns.rs"
harness = false

[[test]]
name = "namespaces"
path = "tests/subsystem/namespaces.rs"
harness = false

[[test]]
name = "pidns"
path = "tests/subsystem/pidns.rs"
harness = false

[[test]]
name = "clone3"
path = "tests/subsystem/clone3.rs"
harness = false

[[test]]
name = "memfd"
path = "tests/subsystem/memfd.rs"
harness = false

[[test]]
name = "rseq"
path = "tests/subsystem/rseq.rs"
harness = false

[[test]]
name = "compat_intro"
path = "tests/subsystem/compat_intro.rs"
harness = false

[[test]]
name = "cgroups"
path = "tests/subsystem/cgroups.rs"
harness = false

[[test]]
name = "seccomp"
path = "tests/subsystem/seccomp.rs"
harness = false

[[test]]
name = "rt"
path = "tests/subsystem/rt.rs"
harness = false

[[test]]
name = "pi_futex"
path = "tests/subsystem/pi_futex.rs"
harness = false

[[test]]
name = "dl"
path = "tests/subsystem/dl.rs"
harness = false

[[test]]
name = "io_sched"
path = "tests/subsystem/io_sched.rs"
harness = false

[[test]]
name = "dl_overrun"
path = "tests/subsystem/dl_overrun.rs"
harness = false

[[test]]
name = "cpu_throttle"
path = "tests/subsystem/cpu_throttle.rs"
harness = false

[[test]]
name = "io_throttle"
path = "tests/subsystem/io_throttle.rs"
harness = false

[[test]]
name = "ptrace"
path = "tests/subsystem/ptrace.rs"
harness = false

[[test]]
name = "ptrace_segv"
path = "tests/subsystem/ptrace_segv.rs"
harness = false

[[test]]
name = "ptrace_singlestep"
path = "tests/subsystem/ptrace_singlestep.rs"
harness = false

[[test]]
name = "uid_sigpending"
path = "tests/subsystem/uid_sigpending.rs"
harness = false

[[test]]
name = "segv_handler"
path = "tests/subsystem/segv_handler.rs"
harness = false

[[test]]
name = "sigfpe_handler"
path = "tests/subsystem/sigfpe_handler.rs"
harness = false

[[test]]
name = "ptrace_attach_run"
path = "tests/subsystem/ptrace_attach_run.rs"
harness = false

[[test]]
name = "clock_settime"
path = "tests/subsystem/clock_settime.rs"
harness = false

[[test]]
name = "futex_waitv"
path = "tests/subsystem/futex_waitv.rs"
harness = false

[[test]]
name = "ptrace_tracefork"
path = "tests/subsystem/ptrace_tracefork.rs"
harness = false

[[test]]
name = "ptrace_traceexec"
path = "tests/subsystem/ptrace_traceexec.rs"
harness = false

[[test]]
name = "ptrace_traceexit"
path = "tests/subsystem/ptrace_traceexit.rs"
harness = false

[[test]]
name = "process_vm"
path = "tests/subsystem/process_vm.rs"
harness = false

[[test]]
name = "ptrace_signal"
path = "tests/subsystem/ptrace_signal.rs"
harness = false

[[test]]
name = "ptrace_orphan"
path = "tests/subsystem/ptrace_orphan.rs"
harness = false

[[test]]
name = "misc_quickwins"
path = "tests/subsystem/misc_quickwins.rs"
harness = false

[[test]]
name = "fault_race"
path = "tests/subsystem/fault_race.rs"
harness = false

[[test]]
name = "tmpfs_leak"
path = "tests/subsystem/tmpfs_leak.rs"
harness = false

[[test]]
name = "sched_churn"
path = "tests/subsystem/sched_churn.rs"
harness = false

[[test]]
name = "timer_storm"
path = "tests/subsystem/timer_storm.rs"
harness = false

[[test]]
name = "futex_timeout"
path = "tests/subsystem/futex_timeout.rs"
harness = false

[[test]]
name = "sigwait_kill"
path = "tests/subsystem/sigwait_kill.rs"
harness = false

[[test]]
name = "spin_kill"
path = "tests/subsystem/spin_kill.rs"
harness = false

[[test]]
name = "pidfd_reap"
path = "tests/subsystem/pidfd_reap.rs"
harness = false

[[test]]
name = "timerfd_race"
path = "tests/subsystem/timerfd_race.rs"
harness = false

[[test]]
name = "cow_fork"
path = "tests/subsystem/cow_fork.rs"
harness = false

[[test]]
name = "cow_futex"
path = "tests/subsystem/cow_futex.rs"
harness = false

[[test]]
name = "cow_ptrace"
path = "tests/subsystem/cow_ptrace.rs"
harness = false

[[test]]
name = "cow_threads"
path = "tests/subsystem/cow_threads.rs"
harness = false

[[test]]
name = "cow_forkrace"
path = "tests/subsystem/cow_forkrace.rs"
harness = false

[[test]]
name = "cow_fork_mmrace"
path = "tests/subsystem/cow_fork_mmrace.rs"
harness = false

[[test]]
name = "fsync"
path = "tests/subsystem/fsync.rs"
harness = false

[[test]]
name = "mknod"
path = "tests/subsystem/mknod.rs"
harness = false

[[test]]
name = "mlock"
path = "tests/subsystem/mlock.rs"
harness = false

[[test]]
name = "msg_dontwait"
path = "tests/subsystem/msg_dontwait.rs"
harness = false

[[test]]
name = "signal_drain"
path = "tests/subsystem/signal_drain.rs"
harness = false

[dependencies]
frame = { path = "../../frame" }
kernel = { path = "../../kernel" }
virtio = { path = "../../drivers/virtio" }
